Mirror operator fails with EXEC_DEFAULT #62757

Closed
opened 2019-03-19 22:43:55 +01:00 by William Reynish · 7 comments

Blender Version
Broken: 1bfbfa2810
Working: 1bfbfa2810~
Also Broken: Blender 2.79

Short description of error
I want to call the Mirror operator from the UI and have it apply immediately. This is normally done by setting the operator context to EXEC_DEFAULT or EXEC_REGION_WIN. However, this doesn't work with the Mirror operator.

Exact steps for others to reproduce the error

1: Apply this patch to change the 3D View Mirror menu to use EXEC_REGION_WIN:

patch.diff

2: Build and open Blender
3: Use Object > Mirror > Mirror X.
4: Mirroring fails

Also note that the redo panel doesn't include any toggles to mirror anything
And lastly, changing the redo options to tweak the mirror orientation doesn't work correctly (it either does nothing or mirrors on all axes at once)

**Blender Version** Broken: 1bfbfa2810 Working: 1bfbfa2810~ Also Broken: Blender 2.79 **Short description of error** I want to call the Mirror operator from the UI and have it apply immediately. This is normally done by setting the operator context to EXEC_DEFAULT or EXEC_REGION_WIN. However, this doesn't work with the Mirror operator. **Exact steps for others to reproduce the error** 1: Apply this patch to change the 3D View Mirror menu to use EXEC_REGION_WIN: [patch.diff](https://archive.blender.org/developer/F6851680/patch.diff) 2: Build and open Blender 3: Use Object > Mirror > Mirror X. 4: Mirroring fails Also note that the redo panel doesn't include any toggles to mirror anything And lastly, changing the redo options to tweak the mirror orientation doesn't work correctly (it either does nothing or mirrors on all axes at once)

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

Added subscriber: @dfelinto

Added subscriber: @dfelinto

For the records, users can reproduce this also by using bpy.ops.transform.mirror(). It basically fails to run via exec even when the constraint axis are set.

For the records, users can reproduce this also by using `bpy.ops.transform.mirror()`. It basically fails to run via exec even when the constraint axis are set.

@dfelinto Ah great, wasn't sure how to write the report in a more useful way.

@dfelinto Ah great, wasn't sure how to write the report in a more useful way.

@WilliamReynish while the patch does nothing to the Redo panel in regard to showing the constraint axis, it allows you now to successfully change the orientation there.

@WilliamReynish while the patch does nothing to the Redo panel in regard to showing the constraint axis, it allows you now to successfully change the orientation there.

This issue was referenced by f889050aea

This issue was referenced by f889050aea70c2ff3c36c8c8600dd2b02d5e9f91

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#62757
No description provided.